<resources>
    <string name="app_name">Pinpisode</string>
    <string name="internet_not_connected">You are not connected to the internet</string>
    <string name="unknown_error">Unknown error</string>
    <string name="video_not_available">This video is not available anymore.</string>
    <string name="click_to_take_notes">Tap to start taking notes!</string>
    <string name="end_time_format">&#x20;-&#x20;%s</string>
    <string name="manage_tags_for_this_note">Manage tags for this note</string>
    <string name="id_edit_add_tag">edit_add_tag</string>
    <string name="add_new_tag">Add new tag</string>
    <string name="share_msg_subject">Check out this Pinpisode note on the %1s: [%2s]!</string>
    <string name="input_video_summary">Input video summary</string>
    <string name="moment">Moment</string>
    <string name="add_some_notes">Add some notes</string>
    <string name="delete">Delete</string>
    <string name="quit">Quit</string>
    <string name="pin_your_episodes">Pin your episodes!</string>
    <string name="youtube_note">YouTube Note</string>
    <string name="spotify_note">Note</string>
    <string name="coauthor_invitation">Coauthor invitations</string>
    <string name="find_your_episodes">Find your episodes</string>
    <string name="profile">Profile</string>

    <string name="login_success">Login Success</string>
    <string name="login_fail">Login Fail</string>
    <string name="log_out">Log Out</string>
    <string name="user_not_found">User not found</string>
    <string name="note_owner">Owner</string>
    <string name="add_coauthors">Invite coauthors</string>
    <string name="coauthor">Coauthor</string>
    <string name="coauthors">Coauthors</string>
    <string name="quit_coauthoring">Quit coauthoring</string>
    <string name="number_of_coauthors">%d coauthor</string>
    <string name="invitation_content">%1s invited you to help edit a %2s note:</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="coauthor_invitation_sent">Coauthor invitation sent</string>
    <string name="trending_on_youtube">Trending on YouTube</string>
    <string name="latest_on_spotify">Latest episodes on Spotify</string>
    <string name="youtube">YouTube</string>
    <string name="spotify">Spotify</string>
    <string name="only_episode_supported">Pinpisode supports only podcast episodes on Spotify</string>
    <string name="authorize_to_access">Authorize to access</string>
    <string name="saved_show">Saved show</string>

    <string name="take_timestamp">Take Timestamp</string>
    <string name="clip_end_before_start_warning">A clip should end later than its start</string>
    <string name="episode_not_found">Episode not found</string>
    <string name="error_msg_spotify_not_installed">Error:\nPlease install Spotify app on the device</string>
    <string name="error_msg_spotify_not_logged_in">Error:\nPlease log in to Spotify to access Spotify related features</string>
    <string name="error_connecting_to_spotify">Error connecting to Spotify</string>
    <string name="pisode_pin">Pisode Pin</string>
    <string name="_2_minutes_ago">2 minutes ago</string>
    <string name="input_summary">Input summary</string>
    <string name="your_summary">Your summary</string>
    <string name="youtube_video_title">YouTube video title</string>
    <string name="spotify_podcast_title">Spotify podcast title</string>
    <string name="_3_hours_ago">3 hours ago</string>
    <string name="_4_coauthors">4 coauthors</string>
    <string name="guide_get_started">Here are some tips for you to make better use of Pinpisode.\n\nLet\'s get started!</string>
    <string name="add_note_by_yt_sharing">To add a new note, share the media on YouTube or Spotify with Pinpisode.</string>
    <string name="or_you_can_search_on_youtube_and_spotify_in_pinpisode">Or search on YouTube and Spotify in Pinpisode</string>
    <string name="how_to_sort_notes">Sort your notes by tag, last edit, media length, or time left from the last timestamp you took.</string>
    <string name="guide_coauthor_invitations">You can edit notes with others on Pinpisode. Check incoming coauthor invitations here.</string>
    <string name="how_to_quit_notes">Finally, swipe left to quit your own note or quit coauthoring other\'s.</string>
    <string name="guide_closure_words">If you want to brush up on these tricks, tap on the help icon.</string>
    <string name="let_s_start_your_episodes">Let\'s start your episodes!</string>
    <string name="podcast">Podcast</string>
    <string name="spotify_exceeded_app_rate_limits">The app has exceeded its rate limits.</string>
    <string name="spotify_api_bad_oauth_request">Bad OAuth request. Contact Pinpisode developer</string>
    <string name="sp_msg_have_not_saved_any_show">You haven\'t saved any show yet</string>
    <string name="unknown_user_name">Unknown user name</string>
    <string name="unknown_email">Unknown email</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="no_signed_in_firebase_user">No user signed in</string>
    <string name="no_signed_in_user">No signed in user</string>
    <string name="note_not_available_anymore">This note is not available anymore</string>
    <string name="get_spotify_free">GET SPOTIFY FREE</string>
    <string name="login_spotify">LOG IN TO SPOTIFY</string>
    <string name="open_spotify">OPEN SPOTIFY</string>

</resources>