<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_inviter_profile"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="@dimen/standard"
        android:layout_marginVertical="@dimen/standard"
        android:src="@drawable/app_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circle" />

    <TextView
        android:id="@+id/text_invitation_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@+id/img_inviter_profile"
        app:layout_constraintStart_toEndOf="@id/img_inviter_profile"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/invitation_content"
        app:layout_constraintEnd_toStartOf="@+id/img_note_thumbnail"/>

    <TextView
        android:id="@+id/text_note_source_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/text_invitation_content"
        app:layout_constraintStart_toStartOf="@id/text_invitation_content"
        app:layout_constraintEnd_toStartOf="@+id/img_note_thumbnail"
        tools:text="A YOUTUBE VIDEO hfvsfvosffddddviovajodikvdsvkaavfvadfvvsdfvsdfsv"/>

    <TextView
        android:id="@+id/text_notif_received_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/standard"
        android:textSize="12sp"
        tools:text="2 weeks ago"
        app:layout_constraintTop_toTopOf="@+id/btn_accept"
        app:layout_constraintStart_toStartOf="@id/text_note_source_title"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_note_thumbnail"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:layout_marginTop="@dimen/standard"
        android:layout_marginEnd="@dimen/standard"
        app:shapeAppearanceOverlay="@style/rounded_corner"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/btn_accept"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/app_icon"/>

    <TextView
        android:id="@+id/btn_accept"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="14dp"
        android:text="@string/accept"
        android:textSize="12sp"
        android:textAlignment="center"
        android:background="@drawable/bg_small_radius_rounded_corner"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toBottomOf="@+id/img_note_thumbnail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_decline"/>


    <TextView
        android:id="@+id/btn_decline"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/standard"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="14dp"
        android:text="@string/decline"
        android:textSize="12sp"
        android:textAlignment="center"
        android:background="@drawable/bg_small_radius_rounded_corner"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:backgroundTint="@color/light_beige"
        app:layout_constraintTop_toBottomOf="@+id/img_note_thumbnail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/translucent_40"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>